--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,8 +6,9 @@
     tools:context=".controller.activity.SplashActivity">
 
     <ImageView
-        android:src="@drawable/welcome"
+        android:background="@drawable/welcome"
         android:layout_centerInParent="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
+
 </RelativeLayout>
