--- a/app/src/main/res/color/main_bottom_textcolor_selector.xml
+++ b/app/src/main/res/color/main_bottom_textcolor_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@android:color/white" android:state_checked="true"></item>
-    <item android:color="@android:color/black" android:state_checked="false"></item>
+    <item android:color="#00BCD4" android:state_checked="false"/>
+    <item android:color="@android:color/black" android:state_checked="true"/>
+
 </selector>
