--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -15,12 +15,26 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#F2F2F2"
+            android:layout_margin="10dp">
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="setting"
-            android:textSize="30dp" />
+            android:src="@drawable/person_data"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/tv_setting_persondata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="个人资料"
+            android:textSize="20dp" />
+        </LinearLayout>
     </ScrollView>
 
     <Button
