--- a/app/src/main/res/layout/header_fragment_contact.xml
+++ b/app/src/main/res/layout/header_fragment_contact.xml
@@ -28,8 +28,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -42,7 +41,6 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/em_group_icon" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
