--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,15 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
     <style name="MainButtonStyle">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:button">@null</item>
-        <item name="android:background">@drawable/main_bottom_bg_selector</item>
+        <item name="android:background">#11000000</item>
         <item name="android:textColor">@color/main_bottom_textcolor_selector</item>
     </style>
+
 </resources>
