--- a/app/src/main/res/layout/activity_group_list.xml
+++ b/app/src/main/res/layout/activity_group_list.xml
@@ -15,7 +15,7 @@
 
     <ListView
         android:id="@+id/lv_grouplist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
 
