--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -4,24 +4,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0F0F0"
     android:orientation="vertical"
     tools:context=".controller.activity.GroupDetailActivity">
 
-    <com.hyphenate.easeui.widget.EaseTitleBar
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleBarTitle="群详情">
-    </com.hyphenate.easeui.widget.EaseTitleBar>
+        android:background="#AB82FF"
+        app:title="群信息"
+        app:titleTextColor="@color/btn_white_normal"
+        app:navigationIcon="@drawable/back">
+    </android.support.v7.widget.Toolbar>
+    <!--<com.hyphenate.easeui.widget.EaseTitleBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:titleBarTitle="群信息"-->
+        <!--app:titleBarLeftImage="@drawable/back">-->
+    <!--</com.hyphenate.easeui.widget.EaseTitleBar>-->
 
     <GridView
         android:id="@+id/gv_groupdetail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:background="#FFFFFF"
         android:horizontalSpacing="10dp"
         android:numColumns="4"
         android:verticalSpacing="10dp">
+
     </GridView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_margin="5dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#FFFFFF"
+        android:layout_margin="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="群聊名称"
+                android:textColor="@color/black_deep"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_groupdetail_groupname"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:textColor="#FFC0CB"
+                android:layout_marginRight="10dp"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#F0F0F0"
+            android:layout_margin="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="群描述"
+                android:textColor="@color/black_deep"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_groupdetail_describe"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginRight="10dp"
+                android:textColor="#FFC0CB"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_margin="5dp" />
 
     <Button
         android:id="@+id/bt_groupdetail_out"
