--- a/app/src/main/res/layout/item_groupdetail.xml
+++ b/app/src/main/res/layout/item_groupdetail.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
 
         <ImageView
             android:id="@+id/iv_group_detail_photo"
